--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -1,4 +1,47 @@
-<header>
-    <h1><?php echo $title; ?></h1>
-</header>
-<p><?php echo $body; ?></p>
+<nav class="navbar navbar-default navbar-fixed-top">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand">Steel <?php echo $this->model->steel->config['steel']['version']; ?></a>
+		</div>
+		<div id="navbar" class="navbar-collapse collapse">
+		<ul class="nav navbar-nav">
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="http://steel.ericrabil.com/docs/api/latest/">Docs</a></li>
+			<li><a href="https://www.github.com/EricRabil/steel-framework">GitHub</a></li>
+			<li><a href="https://www.github.com/EricRabil/steel-framework/wiki">Wiki</a></li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
+			<li class="active">
+			<?php 
+			switch($this->model->steel->config['steel']['type']){
+				case "canary":
+					?>
+					<a style="color:#d35552">Beta!
+					<?php
+					break;
+				case "release-candidate":
+					?>
+					<a style="color:#dba03b" >Pre-Release
+					<?php
+					break;
+				case "release":
+					?>
+					<a style="color:#57af59">Release
+					<?php
+					break;
+			}
+			?>
+			</a></li>
+		</ul>
+		</div><!--/.nav-collapse -->
+	</div><!--/.container-fluid -->
+</nav>
+<div class="jumbotron">
+  <h1>Hello, and Welcome to Steel.</h1>
+</div>
