--- a/templates/postinst.phtml
+++ b/templates/postinst.phtml
@@ -48,7 +48,8 @@
 	</div>
 </div>
 <div class="container">
-	<div class="col-lg-4">
+	<div class="row">
+	<div class="col-xs-12 col-lg-4">
 		<div class="panel panel-info">
 			<div class="panel-heading">
 		    <h3 class="panel-title">What is this?</h3>
@@ -58,7 +59,7 @@
 		  </div>
 		</div>
 	</div>
-	<div class="col-lg-8">
+	<div class="col-xs-12 col-lg-8">
 		<div class="panel panel-danger">
 			<div class="panel-heading">
 		    <h3 class="panel-title">Alright, how do I get started?</h3>
@@ -76,4 +77,5 @@
         </ul>
 		</div>
 	</div>
+</div>
 </div>
