--- a/templates/postinst.phtml
+++ b/templates/postinst.phtml
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand">Steel <?php echo $this->model->steel->config['steel']['version']; ?></a>
+			<a class="navbar-brand"><?php echo $model->navbar_title; ?></a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 		<ul class="nav navbar-nav">
@@ -19,7 +19,7 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li class="active">
 			<?php
-			switch($this->model->steel->config['steel']['type']){
+			switch($this->config['steel']['type']){
 				case "canary":
 					?>
 					<a style="color:#d35552">Beta!
