Made the resource inclusion system more efficient

--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -10,8 +10,9 @@
             <title><?php echo $model->page_title; ?></title>
             <?php
         }
-        foreach ($this->config['resources']['css'] as $name => $url) {
-            echo '<link rel="stylesheet" href="' . $url . '" integrity="' . $this->config['resources']['css-sri'][$name] . '" crossorigin="anonymous" />' . PHP_EOL;
+            foreach ($this->config['resources']['css'] as $stylepack) {
+                echo '<link rel="stylesheet" href="' . $stylepack['url'] . '" integrity="' . $stylepack['sri'] . '" crossorigin="anonymous" />' . PHP_EOL;
+            }
         }
         foreach ($styles as $style) {
             if (empty($style['url']) || empty($style['sri'])) {
@@ -25,8 +26,8 @@
         <?php
         require dirname(__FILE__) . '/' . $page;
         echo PHP_EOL;
-        foreach ($this->config['resources']['js'] as $name => $url) {
-            echo '<script type="text/javascript" src="' . $url . '" integrity="' . $this->config['resources']['js-sri'][$name] . '" crossorigin="anonymous"></script>' . PHP_EOL;
+            foreach ($this->config['resources']['js'] as $scriptpack) {
+                echo '<script type="text/javascript" src="' . $scriptpack['url'] . '" integrity="' . $scriptpack['sri'] . '" crossorigin="anonymous"></script>' . PHP_EOL;
         }
         foreach ($scripts as $script) {
             if (empty($script['url']) || empty($script['sri'])) {
